# ARCHONRELOADED

./: .env.example  AGENTS.md  ARCHON_DEVELOPMENT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  README.md  archon_strategic_report.md  docker-compose.yml
python/: AGENTS.md  Dockerfile.agents  Dockerfile.mcp  Dockerfile.server  pyproject.toml  requirements.dev.txt  requirements.minimal.txt  requirements.txt
python/src/: utils.py
python/src/agents/: main.py
python/src/common/: logging.py  metrics.py  service.py  tracing.py
python/src/mcp/: AGENTS.md  __init__.py  deps.py  main.py  mcp_server.py
python/src/mcp/tools/: __init__.py  document_tools.py  project_tools.py  rag_tools.py  source_tools.py  task_tools.py
python/src/mcp/transport/: sse.py
python/src/server/: __init__.py  config.py  main.py  socket.py
python/src/server/auth/: __init__.py  dependencies.py  jwt.py  models.py  service.py
python/src/server/database/: __init__.py  migrations.py
python/src/server/middleware/: __init__.py  mcp_middleware.py
python/src/server/models/: __init__.py  base.py  (+4 more)
python/src/services/: AGENTS.md
python/tests/: conftest.py  test_agents.py  test_auth.py  test_database_service.py  test_documents_helpers.py  test_logging.py  test_mcp.py  test_mcp_middleware.py  test_mcp_server.py  test_metrics.py  test_migrations.py  test_models.py  test_prometheus_alerts.py  test_repositories.py  test_routes.py  test_server.py  test_service.py  test_service_trace_headers.py  test_socket_events.py  test_source_management_service.py  test_supabase_client.py  test_tracing.py  test_utils.py
(+137 files in other folders)
